--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,22 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+  <script>document.write('<base href="' + document.location + '" />');</script>
   <title>OrderingSystem</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
+  <link href="https://fonts.googleapis.com/css?family=Carter+One" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script type="text/javascript" src="assets/bootstrap-js/bootstrap.js"></script>
+  <script type="text/javascript" src="assets/bootstrap-js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="assets/bootstrap-js/jquery-2.2.4.min.js"></script>
+  <script type="text/javascript" src="assets/bootstrap-js/modal.js"></script>
+  <script src="https://cdn.auth0.com/js/lock/10.8/lock.min.js"></script>
+
 </head>
 <body>
-  <app-root>Orderinf system...</app-root>
+  <app-root>Ordering system...</app-root>
 </body>
 </html>
