--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <script type="text/javascript" src="assets/bootstrap-js/bootstrap.min.js"></script>
   <script type="text/javascript" src="assets/bootstrap-js/jquery-2.2.4.min.js"></script>
   <script type="text/javascript" src="assets/bootstrap-js/modal.js"></script>
+  <script type="text/javascript" src="assets/bootstrap-js/collapse.js"></script>
   <script src="https://cdn.auth0.com/js/lock/10.8/lock.min.js"></script>
 
 </head>
