--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
   <script type="text/javascript" src="assets/bootstrap-js/modal.js"></script>
   <script type="text/javascript" src="assets/bootstrap-js/collapse.js"></script>
   <script src="https://www.gstatic.com/charts/loader.js"></script>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
   <script>
       // !important: You want to give this variable(var googleLoaded = false;). This is used to run multiple chart in your jade.
       var googleLoaded = false;
