--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,10 @@
   <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>-->
 
+  <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
+  <script defer src="https://apis.google.com/js/platform.js"></script>
+  <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
+
   <script type="text/javascript" src="assets/bootstrap-js/bootstrap.js"></script>
   <script type="text/javascript" src="assets/bootstrap-js/bootstrap.min.js"></script>
   <script type="text/javascript" src="assets/bootstrap-js/jquery-2.2.4.min.js"></script>
